# ros2_turtlesim_control

./: README.md
python/turtlesim_control/turtlesim_control/: scheduler.py
python/turtlesim_control_afternoon/: setup.py
python/turtlesim_control_afternoon/config/: follower_config.yaml
python/turtlesim_control_afternoon/launch/: full_example.launch.py  turtle_following.launch.py
python/turtlesim_control_afternoon/turtlesim_control/: base_controller.py  controller.py  scheduler.py  turtle_follower.py  via_point_follower.py
python/turtlesim_control_complete/: CMakeLists.txt
python/turtlesim_control_complete/config/: follower_config.yaml
python/turtlesim_control_complete/launch/: full_example.launch.py  turtle_following.launch.py  via_point_follower.launch.py
python/turtlesim_control_complete/python_lib/: base_controller.py
python/turtlesim_control_complete/scripts/: controller.py  scheduler.py  turtle_follower.py  via_point_follower.py
python/turtlesim_control_full/: CMakeLists.txt  package.xml
python/turtlesim_control_full/launch/: full_example.launch.py  turtle_following.launch.py  via_point_follower.launch.py
python/turtlesim_control_full/scripts/: scheduler.py  (+2 more)
python/turtlesim_control_morning/: package.xml  setup.py
rclm/: RCLM_instruction.mlx  build_rclm.m  package_name.m
rclm/share/: m_create_pkg.m  packages.mat  rclm_node.m  remove_rclm.m  test_closeloop.m
simulink/: slturtlesim_control.slx
turtlesim_control/: CMakeLists.txt  setup.py
turtlesim_control/scripts/: controller.py
turtlesim_interfaces/: CMakeLists.txt  package.xml
(+11 files in other folders)
